<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sn.modelsis</groupId>
    <artifactId>SignArtWeb</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>SignArtWeb</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <war.name>SignArt</war.name>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-multipart-provider</artifactId>
            <version>3.0.19.Final</version>
            <type>jar</type>
        </dependency>
        <!--dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-core</artifactId>
            <version>1.9</version>
            <type>jar</type>
        </dependency-->
        <!-- -->
        <!--dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-servlet</artifactId>
            <version>1.17.1</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-json</artifactId>
            <version>1.8</version>
        </dependency-->
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-multipart</artifactId>
            <version>1.9</version>
        </dependency>
        <!-- -->
<!--            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.7</version>
            </dependency>-->
<!--         https://mvnrepository.com/artifact/com.google.guava/guava -->

<!--    *****************************************************************************************************************************************    
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>20.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.27.1</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                      <artifactId>guava</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                      <artifactId>guava-jdk5</artifactId>
                </exclusion>
            </exclusions>

        </dependency>  
        dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-multipart</artifactId>
            <version>2.0</version>
            <type>jar</type>
        </dependency
        dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-multipart-provider</artifactId>
            <version>3.0.19.Final</version>
            <type>jar</type>
        </dependency
         https://mvnrepository.com/artifact/com.google.api-client/google-api-client 
  
         https://mvnrepository.com/artifact/com.google.apis/google-api-services-youtube 
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-youtube</artifactId>
            <version>v3-rev222-1.25.0</version>
             <exclusions>
                <exclusion>
                   <groupId>com.google.api-client</groupId>
                    <artifactId>google-api-client</artifactId>
                </exclusion>
               <exclusion>
                <groupId>com.google.guava</groupId>
                  <artifactId>guava</artifactId>
               </exclusion>
            </exclusions>
        </dependency>
         https://mvnrepository.com/artifact/com.google.guava/guava 


         <dependency>
            <groupId>com.google.auth</groupId>
            <artifactId>google-auth-library-oauth2-http</artifactId>
            <version>0.12.0</version>
             <exclusions>
               <exclusion>
                <groupId>com.google.guava</groupId>
                  <artifactId>guava</artifactId>
               </exclusion>
            </exclusions>
          </dependency>
           https://mvnrepository.com/artifact/com.google.auth/google-auth-library-credentials 
          <dependency>
              <groupId>com.google.auth</groupId>
              <artifactId>google-auth-library-credentials</artifactId>
              <version>0.12.0</version>
               <exclusions>
               <exclusion>
                <groupId>com.google.guava</groupId>
                  <artifactId>guava</artifactId>
               </exclusion>
            </exclusions>
          </dependency>

            <dependency>
                <groupId>com.google.auth</groupId>
                <artifactId>google-auth-library-appengine</artifactId>
                <version>0.21.1</version>
            </dependency>
************************************************************************************************************************************************************
-->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.2.2.Final</version>
            <!--version>4.3.7.Final</version-->
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.2.2.Final</version>
            <!--version>4.3.7.Final</version-->
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>5.2.2.Final</version>
            <!--version>4.3.7.Final</version-->
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
            <type>jar</type>
        </dependency>
      
       
<!--        <dependency>
         <groupId>com.corundumstudio.socketio</groupId>
         <artifactId>netty-socketio</artifactId>
         <version>1.7.18</version>
        </dependency>-->
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <warName>${war.name}</warName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
<!--                        <goals>
                            <goal>copy</goal>
                        </goals>-->
                        <configuration>
                        <excludes>
                            <exclude>
                                 <groupId>com.google.collections</groupId>                   
                                 <artifactId>google-collections</artifactId>
                             </exclude>
                        </excludes>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>7.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
